--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,6 +6,8 @@
     <title>videoChatApp</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.js" integrity="sha512-UNbeFrHORGTzMn3HTt00fvdojBYHLPxJbLChmtoyDwB6P9hX5mah3kMKm0HHNx/EvSPJt14b+SlD8xhuZ4w9Lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script>
@@ -13,6 +15,7 @@
     </script>
   </head>
   <body>
+    
     <div class="header">
       <div class="logo">
         <div class="header__back">
@@ -36,6 +39,19 @@
           <div id="muteButton" class="options__button">
             <i class="fa fa-microphone"></i>
           </div>
+          <div id="shareButton" class="options__button">
+            <i class="fa fa-microphone"></i>
+          </div>
+          <label for="filter">Filter: </label>
+    <select id="filter">
+        <option value="none">None</option>
+        <option value="blur">Blur</option>
+        <option value="grayscale">Grayscale</option>
+        <option value="invert">Invert</option>
+        <option value="sepia">Sepia</option>
+    </select>
+    <button id='btn-record-webm'>START</button>
+    <button id='btn-record-stop'>STOP</button>
           <div id="showChat" class="options__button">
             <i class="fa fa-comment"></i>
           </div>
@@ -61,6 +77,9 @@
       </div>
     </div>
   </div>
+
   </body>
   <script src="script.js"></script>
 </html>
+
+
